src/objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>Event_Date_and_Time__c</fullName>
        <inlineHelpText>Date and time of the Eventbrite event.</inlineHelpText>
        <label>Event Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Eventbrite_Answers__c</fullName>
        <label>Eventbrite Answers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Eventbrite_Attendees_Checked_In__c</fullName>
        <inlineHelpText>Number of attendees who were checked in for the event via Eventbrite mobile app or website.</inlineHelpText>
        <label>Attendees Checked In</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Eventbrite_Barcodes__c</fullName>
        <inlineHelpText>One or more Eventbrite barcodes for this campaign member, separated by semicolons.</inlineHelpText>
        <label>Eventbrite Barcodes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Eventbrite_Checkins__c</fullName>
        <label>Barcodes Checked In</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Eventbrite_Ticket_Quantity__c</fullName>
        <label>Ticket Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Eventbrite_Ticket_Type__c</fullName>
        <inlineHelpText>Type of Eventbrite ticket(s) ordered by this attendee.</inlineHelpText>
        <label>Eventbrite Ticket Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>